<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.5.0</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>

	<groupId>br.com.ifsp.pi.lixt</groupId>
	<artifactId>lixt-backend</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>lixt-backend</name>
	<description>Aplicação Lixt</description>

	<properties>
		<java.version>11</java.version>

		<oauth.version>2.1.5.RELEASE</oauth.version>
		<swagger.version>2.9.2</swagger.version>
		<mail.version>1.4.7</mail.version>
	</properties>

	<dependencies>

		<!-- Spring Boot -->

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- Commons -->

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>

		<!-- Spring Data -->

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-core</artifactId>
		</dependency>

		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-spatial</artifactId>
		</dependency>

		<!-- Spring Security -->

		<dependency>
			<groupId>org.springframework.security.oauth.boot</groupId>
			<artifactId>spring-security-oauth2-autoconfigure</artifactId>
			<version>${oauth.version}</version>
		</dependency>

		<!-- Mail -->

		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>mail</artifactId>
			<version>${mail.version}</version>
		</dependency>

		<!-- Swagger -->

		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger2</artifactId>
			<version>${swagger.version}</version>
		</dependency>

		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger-ui</artifactId>
			<version>${swagger.version}</version>
		</dependency>

	</dependencies>

	<profiles>

		<profile>
			<id>local</id>
			<properties>
				<activatedProperties>local</activatedProperties>
				<db.driver>com.mysql.jdbc.Driver</db.driver>
			</properties>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<dependencies>
				<dependency>
					<groupId>mysql</groupId>
					<artifactId>mysql-connector-java</artifactId>
				</dependency>
			</dependencies>
		</profile>

		<profile>
			<id>prod</id>
			<properties>
				<activatedProperties>prod</activatedProperties>
				<db.driver>software.aws.rds.jdbc.Driver</db.driver>
			</properties>
			<dependencies>
				<dependency>
					<groupId>software.aws.rds</groupId>
					<artifactId>aws-mysql-jdbc</artifactId>
					<version>0.1.0</version>
				</dependency>
			</dependencies>
		</profile>

	</profiles>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>

			<plugin>
				<groupId>com.microsoft.azure</groupId>
				<artifactId>azure-webapp-maven-plugin</artifactId>
				<version>2.0.0</version>
				<configuration>
					<schemaVersion>v2</schemaVersion>
					<subscriptionId>3e760395-2030-4ef8-9560-fe98f64a33fa</subscriptionId>
					<resourceGroup>RG-Lixt</resourceGroup>
					<appName>lixt-ws</appName>
					<pricingTier>F1</pricingTier>
					<region>westus</region>
					<appServicePlanName>lixt-ws-serviceplan</appServicePlanName>
					<appServicePlanResourceGroup>RG-Lixt</appServicePlanResourceGroup>
					<runtime>
						<os>Windows</os>
						<javaVersion>Java 11</javaVersion>
						<webContainer>Java SE</webContainer>
					</runtime>
					<deployment>
						<resources>
							<resource>
								<directory>${project.basedir}/target</directory>
								<includes>
									<include>*.jar</include>
								</includes>
							</resource>
						</resources>
					</deployment>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>